# 3D-Graphics-Particle-Systems--Final-Project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: camera.h  particle.h
resource/: basic.frag  basic.vert  ground.frag  ground.vert  particle.frag  particle.vert
src/: camera.cpp  particle.cpp
